# DISCO

./: .gitignore  CHANGELOG.md  README.md  ca_disco.py  disco.py  pyproject.toml
disco/: cli.py  concat.py  decomp.py
