[project]
name = "disco-gdl"
version = "1.5.0"
description = "Decomposition Into Single-COpy gene trees (DISCO) is a method for decomposing multi-copy gene-family trees while attempting to preserve orthologs and discard paralogs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["treeswift>=1.1,<2", "biopython>=1.85,<2", "pytest>=8.4"]

[project.scripts]
disco = "disco.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["disco*"]
